@@ -345,6 +345,8 @@ protected:
 
     void DoDirtyProcessing();
 
+    virtual wxSize DoGetBestSize() const;
+
 private:
     DECLARE_EVENT_TABLE()
     DECLARE_DYNAMIC_CLASS(wxGenericTreeCtrl)
